@@ -8,13 +8,9 @@ package com.badlogic.gdx.backends.lwjgl3;
  */
 public class Lwjgl3WindowAdapter implements Lwjgl3WindowListener {
 	@Override
-	public void iconified() {
+	public void iconified(boolean isIconified) {
 	}
 
-	@Override
-	public void deiconified() {
-	}
-	
 	@Override
 	public void maximized(boolean isMaximized) {
 	}
