@@ -11,6 +11,7 @@
 - LWJGL3 backend now supports non-continuous rendering, see https://github.com/libgdx/libgdx/pull/3772
 - API Change: Lwjgl3WindowListener.refreshRequested() is called when the windowing system (GLFW) reports contents of a window are dirty and need to be redrawn.
 - API Change: Lwjgl3WindowListener.maximized() is called when a window enters or exits a maximized state.
+- API Change: Lwjgl3WindowListener.deiconified() removed, combined with .iconified().
 - API Change: Lwjgl3Window.deiconify() renamed to .restore() since it can also be used to de-maximize a window.
 - Lwjgl3Window now has a maximize() method, and windows can be started maximized using the window or app configuration's setMaximized() method.
 
